--- a/inner.html
+++ b/inner.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: гостиницы Седоны</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/min.normalize.css" rel="stylesheet">
+		<link href="css/min.style.css" rel="stylesheet">
   </head>
 <body>
 	<div class="container">
@@ -43,22 +43,22 @@
 		<main>
 			<section class="filter-part">
 				<h2 class="visually-hidden">Фильтр товаров</h2>
-				<form class="filter" method="get" action="https://echo.htmlacademy.ru">
+				<form class="filter" method="post" action="https://echo.htmlacademy.ru">
 					<section class="infrostructure">
 						<fieldset>
 							<legend>Инфраструктура:</legend>
 							<ul>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
-									<label class="filter-label" for="filter-pool" tabindex="0">Бассейн</label>
+									<label for="filter-pool">Бассейн</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
-									<label class="filter-label" for="filter-parking" tabindex="0">Парковка</label>
+									<label for="filter-parking">Парковка</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
-									<label class="filter-label" for="filter-wifi" tabindex="0">Wi-Fi</label>
+									<label for="filter-wifi">Wi-Fi</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -69,15 +69,15 @@
 							<ul>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
-									<label class="filter-label" for="filter-hotel" tabindex="0">Гостиница</label>
+									<label for="filter-hotel">Гостиница</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
-									<label class="filter-label" for="filter-motel" tabindex="0">Мотель</label>
+									<label for="filter-motel">Мотель</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
-									<label class="filter-label" for="filter-apartments" tabindex="0">Апартаменты</label>
+									<label for="filter-apartments">Апартаменты</label>
 								</li>
 							</ul>
 						</fieldset>
