правки по защите

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-		<link href="css/min.normalize.css" rel="stylesheet">
-		<link href="css/min.style.css" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
   </head>
 <body>
 	<div class="container">
@@ -29,7 +29,7 @@
 						<a href="#">Информация</a>
 					</li>
 					<li class="menu-item">
-						<a href="#">Фото и ведео</a>
+						<a href="#">Фото и видео</a>
 					</li>
 					<li class="menu-item right-side">
 						<a href="#">Карта штата</a>
@@ -42,7 +42,7 @@
 		</header>
 		<main>
 			<section class="main-banner">
-				<img class="index-banner" src="img/welcome.png" alt="Welcome to Sedona">
+				<img class="index-banner" src="img/welcome.png" width="459" height="353" alt="Welcome to Sedona">
 			</section>
 			<section class="main-info">
 				<h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -57,7 +57,7 @@
 							<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
 						</div>
 						<div class="reason-smart-picture"> 
-							<img src="img/photo-city.jpg" alt="City of Sedona">
+							<img src="img/photo-city.jpg"  width="800" height="256" alt="City of Sedona">
 						</div>
 						<ul class="extra-reasons">
 							<li class="extra-reason-item house">
@@ -76,7 +76,7 @@
 					</div>
 					<div class="reason-smart">
 						<div class="reason-smart-picture"> 
-							<img src="img/photo-bridge.jpg" alt="Devil's Bridge">
+							<img src="img/photo-bridge.jpg" width="800" height="256" alt="Devil's Bridge" >
 						</div>
 						<div class="text-reason-smart"> 
 							<h2>Там есть<br>Мост дьявола</h2>
