--- a/inner.html
+++ b/inner.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: гостиницы Седоны</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-		<link href="css/min.normalize.css" rel="stylesheet">
-		<link href="css/min.style.css" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
   </head>
 <body>
 	<div class="container">
@@ -29,7 +29,7 @@
 						<a href="#">Информация</a>
 					</li>
 					<li class="menu-item">
-						<a href="#">Фото и ведео</a>
+						<a href="#">Фото и видео</a>
 					</li>
 					<li class="menu-item right-side">
 						<a href="#">Карта штата</a>
@@ -121,7 +121,7 @@
 					<button type="button" aria-label="По возрастанию" class="up-down">
 						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
 					</button>
-					<button type="button" aria-label="По убыванию" class="up-down">
+					<button type="button" aria-label="По убыванию" class="up-down current">
 						<svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg>
 					</button>
 				</div>
