испарвила какую то шляпу с названиями изображений

--- a/inner.html
+++ b/inner.html
@@ -130,7 +130,7 @@
 				<ul class="hotels-list">
 					<li class="hotel-item">
 						<div class="hotel-img">
-							<img src="img/amara-resort.jpg" width="135" height="90" alt="Amara Resort Spa"/>
+							<img src="img/amara-resort1.jpg" width="135" height="90" alt="Amara Resort Spa"/>
 						</div>
 						<div class="hotel-text">
 							<h2><a class="hotel-name" href="#">Amara Resort & Spa</a></h2>
@@ -163,7 +163,7 @@
 					</li>
 					<li class="hotel-item">
 						<div class="hotel-img">
-							<img src="img/desert-uail-inn.jpg" width="135" height="90" alt="Desert quail inn"/>
+							<img src="img/desert-uail-inn2.jpg" width="135" height="90" alt="Desert quail inn"/>
 						</div>
 						<div class="hotel-text">
 							<h2><a class="hotel-name" href="#">Desert quail inn</a></h2>
@@ -193,7 +193,7 @@
 					</li>
 					<li class="hotel-item">
 						<div class="hotel-img">
-							<img src="img/villas-at-poco-diablo.jpg" width="135" height="90" alt="Villas at Poco Diablo"/>
+							<img src="img/villas-at-poco-diablo3.jpg" width="135" height="90" alt="Villas at Poco Diablo"/>
 						</div>
 						<div class="hotel-text">
 							<h2><a class="hotel-name" href="#">Villas at Poco Diablo</a></h2>
