--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</header>
 		<main>
 			<section class="main-banner">
-				<img class="index-banner" src="img/welcome.png" width="459" height="353" alt="Welcome to Sedona">
+				<img class="index-banner" src="img/welcome.svg" width="459" height="353" alt="Welcome to Sedona">
 			</section>
 			<section class="main-info">
 				<h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -123,20 +123,20 @@
 						</p>
 						<p class="register-form-field">
 							<label class="adults" for="adults">Взрослые:</label>
-							<button type="button" class="minus">
+							<button type="button" aria-label="Минус" class="minus">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 22.354 22.354"><path data-original="#000000" class="active-path" d="M0 8.61h22.354v5.133H0z"></path></svg>
 							</button>
 							<input class="people-number" id="adults" type="text" pattern="[1-9]*" placeholder="2">
-							<button type="button" class="plus">
+							<button type="button" aria-label="Плюс" class="plus">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 533.333 533.333">
 								<path d="M516.667 200H333.333V16.667C333.333 7.462 325.871 0 316.667 0h-100C207.462 0 200 7.462 200 16.667V200H16.667C7.462 200 0 207.462 0 216.667v100c0 9.204 7.462 16.666 16.667 16.666H200v183.334c0 9.204 7.462 16.666 16.667 16.666h100c9.204 0 16.667-7.462 16.667-16.666V333.333h183.333c9.204 0 16.667-7.462 16.667-16.666v-100c-.001-9.205-7.463-16.667-16.667-16.667z" data-original="#000000" class="active-path"></path></svg>
 							</button>
 							<label class="kids" for="children">Дети:</label>
-							<button type="button" class="minus">
+							<button type="button" aria-label="Минус" class="minus">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 22.354 22.354"><path data-original="#000000" class="active-path" d="M0 8.61h22.354v5.133H0z"></path></svg>
 							</button>
 							<input class="people-number" id="children" type="text" pattern="[0-9]*" placeholder="0">
-							<button type="button" class="plus">
+							<button type="button" aria-label="Плюс" class="plus">
 								<svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 533.333 533.333">
 								<path d="M516.667 200H333.333V16.667C333.333 7.462 325.871 0 316.667 0h-100C207.462 0 200 7.462 200 16.667V200H16.667C7.462 200 0 207.462 0 216.667v100c0 9.204 7.462 16.666 16.667 16.666H200v183.334c0 9.204 7.462 16.666 16.667 16.666h100c9.204 0 16.667-7.462 16.667-16.666V333.333h183.333c9.204 0 16.667-7.462 16.667-16.666v-100c-.001-9.205-7.463-16.667-16.667-16.667z" data-original="#000000" class="active-path"></path></svg>
 							</button>
