переполнение контентом+глобальные стили исправила

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/min.normalize.css" rel="stylesheet">
+		<link href="css/min.style.css" rel="stylesheet">
   </head>
 <body>
 	<div class="container">
@@ -51,13 +51,15 @@
 			<section class="features">
 				<div class="reasons-list">
 					<div class="reason-smart">
-						<div class="text-reason-smart"> 
-							<h2>Настоящий городок</h2>
-							<span class="number">— №1 —</span>
-							<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-						</div>
-						<div class="reason-smart-picture"> 
-							<img src="img/photo-city.jpg"  width="800" height="256" alt="City of Sedona">
+						<div class="smart-reason-row">
+							<div class="text-reason-smart"> 
+								<h2>Настоящий городок</h2>
+								<span class="number">— №1 —</span>
+								<p class="smart-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+							</div>
+							<div class="reason-smart-picture"> 
+								<img src="img/photo-city.jpg"  width="800" height="256" alt="City of Sedona">
+							</div>
 						</div>
 						<ul class="extra-reasons">
 							<li class="extra-reason-item house">
@@ -75,29 +77,33 @@
 						</ul>
 					</div>
 					<div class="reason-smart">
-						<div class="reason-smart-picture"> 
-							<img src="img/photo-bridge.jpg" width="800" height="256" alt="Devil's Bridge" >
+						<div class="smart-reason-row">
+							<div class="reason-smart-picture"> 
+								<img src="img/photo-bridge.jpg" width="800" height="256" alt="Devil's Bridge" >
+							</div>
+							<div class="text-reason-smart"> 
+								<h2>Там есть<br>Мост дьявола</h2>
+								<span class="number">— №2 —</span>
+								<p class="smart-text">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+							</div>
 						</div>
-						<div class="text-reason-smart"> 
-							<h2>Там есть<br>Мост дьявола</h2>
-							<span class="number">— №2 —</span>
-							<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+					</div>
+					<div class="reason-row">
+						<div class="reason">
+							<h2>Небольшая площадь</h2>
+							<span class="number">— №3 —</span>
+							<p class="reason-text-grey">Все достопримечательности находятся очень близко</p>
 						</div>
-					</div>
-					<div class="reason">
-						<h2>Небольшая площадь</h2>
-						<span class="number">— №3 —</span>
-						<p class="reason-text-grey">Все достопримечательности находятся очень близко</p>
-					</div>
-					<div class="reason">
-						<h2>Красивая дорога</h2>
-						<span class="number">— №4 —</span>
-						<p class="reason-text-grey">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-					</div>
-					<div class="reason">
-						<h2>Мало туристов</h2>
-						<span class="number">— №5 —</span>
-						<p class="reason-text-grey">Большинство едет в гранд каньон и толпится там</p>
+						<div class="reason">
+							<h2>Красивая дорога</h2>
+							<span class="number">— №4 —</span>
+							<p class="reason-text-grey">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+						</div>
+						<div class="reason">
+							<h2>Мало туристов</h2>
+							<span class="number">— №5 —</span>
+							<p class="reason-text-grey">Большинство едет в гранд каньон и толпится там</p>
+						</div>
 					</div>
 				</div>
 			</section>
