добавила скрытые заголовки

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				<img class="index-banner" src="img/welcome.svg" width="459" height="353" alt="Welcome to Sedona">
 			</section>
 			<section class="main-info">
+				<h1 class="visually-hidden">Седона - туристический город в Аризоне</h1>
 				<h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
 				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 			</section>
