--- a/inner.html
+++ b/inner.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: гостиницы Седоны</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
 		<link href="css/min.normalize.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/min.style.css" rel="stylesheet">
   </head>
 <body>
 	<div class="container">
@@ -127,6 +127,7 @@
 				</div>
 			</section>
 			<section class="hotels">
+				<h1 class="visually-hidden">Список отелей в Седоне</h1>
 				<ul class="hotels-list">
 					<li class="hotel-item">
 						<div class="hotel-img">
